Open CV learning

--- a/Python Learning.ipynb
+++ b/Python Learning.ipynb
@@ -72,9 +72,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.38259339],\n",
-       "       [0.53679918],\n",
-       "       [0.88410004]])"
+       "array([[0.92944932],\n",
+       "       [0.88969193],\n",
+       "       [0.42438841]])"
       ]
      },
      "execution_count": 4,
@@ -95,9 +95,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[-1.217687  , -1.30357238,  0.04033167],\n",
-       "       [-0.61681631, -0.08286453,  0.43692828],\n",
-       "       [ 0.65384082,  0.02156215,  0.41064612]])"
+       "array([[ 1.74833011, -0.99942878,  1.92788878],\n",
+       "       [-0.06455301, -0.57274121, -0.55315077],\n",
+       "       [ 0.09238832,  0.68342891,  0.35665347]])"
       ]
      },
      "execution_count": 5,
@@ -118,19 +118,19 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.32295004,  0.23377401, -2.13316716, ..., -0.70247318,\n",
-       "        -0.50543345, -1.56804538],\n",
-       "       [-1.00812686, -1.41699346,  0.29634512, ..., -1.61182347,\n",
-       "         1.13468173, -0.30323712],\n",
-       "       [ 0.53655495, -0.20912327, -0.08025124, ...,  0.15616602,\n",
-       "        -1.59547083,  0.34538135],\n",
+       "array([[-0.69575397,  0.53880467, -0.3244085 , ..., -0.41258705,\n",
+       "        -0.28213226,  0.46960961],\n",
+       "       [ 0.76682178,  0.26417788,  1.90733399, ..., -0.12556308,\n",
+       "         0.00316907,  0.55543393],\n",
+       "       [ 0.38923401,  1.70762886, -1.08462754, ..., -1.23863904,\n",
+       "         0.1384261 , -0.16773488],\n",
        "       ...,\n",
-       "       [ 0.42698854, -0.58743682,  0.19065259, ..., -0.16508813,\n",
-       "        -0.67974877, -0.08549753],\n",
-       "       [ 0.94425216,  0.36188675,  1.39261514, ..., -1.2096486 ,\n",
-       "        -1.51246237,  0.19886731],\n",
-       "       [ 0.04173248, -2.30622125,  0.63733161, ..., -0.13846587,\n",
-       "        -0.15308123, -0.35376556]])"
+       "       [-0.94656557,  0.08015095, -1.17900396, ...,  0.83876576,\n",
+       "         0.43504675, -0.92411359],\n",
+       "       [ 1.44236286, -0.06460924, -1.38312465, ..., -1.51007478,\n",
+       "         1.54384682, -1.52117543],\n",
+       "       [-0.61637102, -0.90983434, -1.55821571, ..., -0.61352378,\n",
+       "         0.9500974 , -2.13223569]])"
       ]
      },
      "execution_count": 6,
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "6c268925-8f47-4061-819f-a82dafb2756c",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "039e915e-ac92-44fd-85f1-7bcd825d41b8",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "a9894466-563d-42b6-a528-aca2b4bcff0b",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "e498252a-277a-46af-8352-5654e47e0ecd",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "cb93ce03-8231-4c3a-8426-486187ff225f",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        " array([ -6.1, -15.4, -15. , ...,   4.2,  -0.1,  -3.3]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "d017ac53-97d5-43b2-ab35-5dac3022468a",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "4e5cbc79-eafd-40d2-9b32-1879783df852",
    "metadata": {},
    "outputs": [],
@@ -256,19 +256,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "0633867f-6fe0-4ba3-bf84-be377e6fb7fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.00913567, 0.15982589, 0.38378652],\n",
-       "       [0.28658366, 0.85786308, 0.38356645],\n",
-       "       [0.6656656 , 0.51692427, 0.16083285]])"
+       "array([[0.71137416, 0.74312792, 0.50955694],\n",
+       "       [0.59725025, 0.49611146, 0.42963251],\n",
+       "       [0.90816806, 0.79256938, 0.93418788]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "be36c8d8-660e-4689-8c03-4e37945a6062",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "41f041e9-7c78-4a85-8bc7-b3197a22d1b6",
    "metadata": {},
    "outputs": [],
@@ -299,19 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "73f55c6d-a894-4c1b-8378-95321bd8113d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.00913567, 0.15982589, 0.38378652],\n",
-       "       [0.28658366, 0.85786308, 0.38356645],\n",
-       "       [0.6656656 , 0.51692427, 0.16083285]])"
+       "array([[0.71137416, 0.74312792, 0.50955694],\n",
+       "       [0.59725025, 0.49611146, 0.42963251],\n",
+       "       [0.90816806, 0.79256938, 0.93418788]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "005bc31c-8813-490a-81c6-53cd8f6ce8fe",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "9"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "86339963-558e-4978-98c4-59ae94d3cf9a",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "(3, 3)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,17 +364,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "c511fcba-f347-4f6c-9f4e-1f57203adc4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.6656656 , 0.51692427, 0.16083285])"
+       "array([0.90816806, 0.79256938, 0.93418788])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "b687c475-d1b0-4910-80ad-051883b4b579",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "id": "035339bf-d3ea-475b-a630-56e3e9727c2c",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "id": "acd0c098-1844-4212-9cad-d92f524ebfe4",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "        7.71604938, 11.11111111, 15.12345679, 19.75308642, 25.        ])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,17 +430,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "id": "10d58bf4-61ef-47f8-a3bb-89d25f986a29",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1cc09afde10>]"
+       "[<matplotlib.lines.Line2D at 0x2390066e2d0>]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "id": "9c8b6b60-372e-4d7f-a264-862318fed7e4",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "Text(0.5, 1.0, 'Inner Plot')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -519,17 +519,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "bade646c-0342-4656-a8ed-710769e86f49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2"
+    "import cv2\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "b011cf52-e7fc-48ac-b981-6e471ac59d11",
    "metadata": {},
    "outputs": [],
@@ -544,8 +545,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "4cc6003c-ac44-43fc-9073-c208d9eb3853",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread('API 04.png', -1)\n",
+    "img = cv2.resize(img, (600,400))\n",
+    "\n",
+    "for i in range(200):\n",
+    "    for j in range(img.shape[1]):\n",
+    "        img[i][j] = [ random.randint(0, 255), random.randint(0, 255), random.randint(0, 255)]\n",
+    "\n",
+    "\n",
+    "cv2.imshow('Image', img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f4150e96-f242-440b-a981-d8cc4e0cd6b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Video Capture Using OpenCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "50aad2e4-1045-4027-b3c9-63d3c7a2c68d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "eac38b89-67c6-4db9-98e4-525b1f2815ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Video Capture and Window Sizes\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    width = int(cap.get(3))\n",
+    "    height = int(cap.get(4))\n",
+    "    \n",
+    "    image = np.zeros(frame.shape, np.uint8)\n",
+    "\n",
+    "    smaller_frame = cv2.resize(frame, (0,0), fx=0.5, fy=0.5)\n",
+    "    image[:height//2, :width//2] = cv2.rotate(smaller_frame, cv2.ROTATE_180)\n",
+    "    image[height//2:, :width//2] = smaller_frame\n",
+    "    image[:height//2, width//2:] = cv2.rotate(smaller_frame, cv2.ROTATE_180)\n",
+    "    image[height//2:, width//2:] = smaller_frame\n",
+    "    \n",
+    "    cv2.imshow('frame', image)\n",
+    "    if cv2.waitKey(1) == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1f4f67ce-02b9-4f4c-8cbb-173e38c34065",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Line, Circle, Images and Rectangle DRAW in Video Frame\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    width = int(cap.get(3))\n",
+    "    height = int(cap.get(4))\n",
+    "\n",
+    "    image = cv2.line(frame, (0,0), (width, height), (255,0,0), 5)\n",
+    "    image = cv2.line(image, (0, height), (width, 0), (0,255,0), 2)\n",
+    "    image = cv2.rectangle(image, (100, 100), (300,200), (0,0,255), -1)\n",
+    "    image = cv2.circle(image, (300,300), 60, (255,255,0), 3) \n",
+    "\n",
+    "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "    image = cv2.putText(image, 'Hello World!', (380, height - 20), font, 3, (255,0,0), 3) #position, font style, text size, color, width\n",
+    "    \n",
+    "    cv2.imshow('frame', image)\n",
+    "    if cv2.waitKey(1) == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a407aec2-55f6-4abd-84ee-8ddf4238b30c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Colors and Color Detection\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    width = int(cap.get(3))\n",
+    "    height = int(cap.get(4))\n",
+    "\n",
+    "    hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+    "    lower_blue = np.array([90, 50, 50])\n",
+    "    upper_blue = np.array([130, 255, 255])\n",
+    "\n",
+    "    mask = cv2.inRange(hsv, lower_blue, upper_blue)\n",
+    "\n",
+    "    result = cv2.bitwise_and(frame, frame, mask=mask)\n",
+    "    \n",
+    "    cv2.imshow('frame', result)\n",
+    "    cv2.imshow('mask', mask)\n",
+    "    cv2.imshow('hsv', hsv)\n",
+    "    if cv2.waitKey(1) == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3595450e-888f-4e14-a7cd-963b15f861e4",
    "metadata": {},
    "outputs": [],
    "source": []
