Corners and Colors Detection

--- a/Python Learning.ipynb
+++ b/Python Learning.ipynb
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "a407aec2-55f6-4abd-84ee-8ddf4238b30c",
    "metadata": {},
    "outputs": [],
@@ -684,8 +684,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "3595450e-888f-4e14-a7cd-963b15f861e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\star\\AppData\\Local\\Temp\\ipykernel_14000\\3845263173.py:11: DeprecationWarning: `np.int0` is a deprecated alias for `np.intp`.  (Deprecated NumPy 1.24)\n",
+      "  corners = np.int0(corners)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Corners Detection\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "img = cv2.imread('Chess Board.jpg')\n",
+    "\n",
+    "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "corners = cv2.goodFeaturesToTrack(gray, 50, 0.1, 10)\n",
+    "\n",
+    "corners = np.int0(corners)\n",
+    "\n",
+    "for corner in corners:\n",
+    "    x, y = corner.ravel()\n",
+    "    cv2.circle(img, (x,y), 8, (255,0,0) , -1)\n",
+    "\n",
+    "for i in range(len(corners)):\n",
+    "    for j in range(i + 1, len(corners)):\n",
+    "        corner1 = tuple(corners[i][0])\n",
+    "        corner2 = tuple(corners[j][0])\n",
+    "        x, y, z = np.random.randint(0, 255, size=3)\n",
+    "        cv2.line(img, corner1, corner2, (int(x), int(y), int(z)), 1)\n",
+    "\n",
+    "cv2.imshow('Frame', img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e94e8712-f0b3-4c56-b730-4a684c295981",
    "metadata": {},
    "outputs": [],
    "source": []
