Object, face and Eye Detection using OpenCV

--- a/Python Learning.ipynb
+++ b/Python Learning.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "50aad2e4-1045-4027-b3c9-63d3c7a2c68d",
    "metadata": {},
    "outputs": [],
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "1f4f67ce-02b9-4f4c-8cbb-173e38c34065",
    "metadata": {},
    "outputs": [],
@@ -728,8 +728,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "e94e8712-f0b3-4c56-b730-4a684c295981",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(168, 179) (297, 234)\n",
+      "(57, 109) (297, 234)\n",
+      "(179, 154) (91, 24)\n",
+      "(192, 178) (297, 234)\n",
+      "(297, 234) (192, 176)\n",
+      "(297, 234) (174, 110)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Image Detection in photo\n",
+    "img = cv2.imread('Main.jpeg', 0)\n",
+    "ball = cv2.imread('Ball.jpeg', 0)\n",
+    "\n",
+    "ball = cv2.resize(ball, (75, 55))\n",
+    "\n",
+    "h, w = ball.shape\n",
+    "\n",
+    "methods = [cv2.TM_CCOEFF, cv2.TM_CCOEFF_NORMED, cv2.TM_CCORR,\n",
+    "            cv2.TM_CCORR_NORMED, cv2.TM_SQDIFF, cv2.TM_SQDIFF_NORMED]\n",
+    "\n",
+    "for method in methods:\n",
+    "    img2 = img.copy()\n",
+    "    result = cv2.matchTemplate(img2, ball, method)\n",
+    "    min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(result)\n",
+    "    print(min_loc, max_loc)\n",
+    "    if method in [cv2.TM_SQDIFF, cv2.TM_SQDIFF_NORMED]:\n",
+    "        location = min_loc\n",
+    "    else:\n",
+    "        location = max_loc\n",
+    "\n",
+    "    bottom_right = (location[0] + w, location[1] + h)\n",
+    "    \n",
+    "    cv2.rectangle(img2, location, bottom_right, 255, 5)\n",
+    "    cv2.imshow('Frame', img2)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e6d4c9a7-f28e-44c0-be16-855785f5a414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Face and Eyes Detection \n",
+    "\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "face_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + 'haarcascade_frontalface_default.xml')\n",
+    "eye_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + 'haarcascade_eye.xml')\n",
+    "\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
+    "    for (x, y, w, h) in faces:\n",
+    "        cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 0, 0), 3)\n",
+    "        roi_gray = gray[y:y+w, x:x+w]\n",
+    "        roi_color = frame[y:y+h, x:x+w]\n",
+    "        #eyes\n",
+    "        eyes = eye_cascade.detectMultiScale(roi_gray, 1.3, 5)\n",
+    "        for (ex, ey, ew, eh) in eyes:\n",
+    "            cv2.rectangle(roi_color, (ex, ey), (ex + ew, ey + eh), (255, 0, 0), 3)\n",
+    "    \n",
+    "    cv2.imshow('Frame', frame)\n",
+    "    if(cv2.waitKey(1)) == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fe8b963-1242-4770-83cf-17bec7630dce",
    "metadata": {},
    "outputs": [],
    "source": []
